--- a/db/docker-compose.yaml
+++ b/db/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   db:
     image: postgres:15
@@ -11,6 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./migrations:/migrations
 
 volumes:
   pgdata:
