--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,12 @@ dist-ssr
 *.sln
 *.sw?
 data-collection/.env
+backend/.env
+backend/__pycache__/main.cpython-313.pyc
+data-collection/node_count_by_country.csv
+data-collection/__pycache__/getdata.cpython-313.pyc
+data-collection/data/city_geocode_cache.json
+data-collection/data/country_geocode_cache.json
+data-collection/data/node_count_by_city.csv
+data-collection/data/node_count_by_country.csv
+frontend/.env
