real stacked charts!

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ data-collection/data/node_count_by_city.csv
 data-collection/data/node_count_by_country.csv
 frontend/.env
 data-collection/data/plans.db
+backend/nohup.out
