--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ data-collection/plans.db-wal
 backend/statsdb_dump.sql
 backend/statsdb_dump.zip
 backend/venv
+
+# SQLite databases
+*.db
+*.db-shm
+*.db-wal
+
+# Claude Code
+.claude/
