--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,45 @@
 {
   "name": "salad-stats-frontend",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\""
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.6",
-    "@mui/material": "^7.3.6",
-    "@mui/styled-engine": "^7.3.6",
-    "@tanstack/react-table": "^8.21.3",
-    "chart.js": "^4.5.1",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-plugin-annotation": "^3.1.0",
-    "date-fns": "^4.1.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-globe.gl": "^2.37.0",
-    "three": "^0.181.2"
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@types/three": "^0.181.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "prettier": "^3.7.4",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.33.0",
-    "vite": "^7.3.0"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@eslint/js": "9.39.2",
+    "@mui/icons-material": "7.3.7",
+    "@mui/material": "7.3.7",
+    "@mui/styled-engine": "7.3.7",
+    "@tanstack/react-table": "8.21.3",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "@types/three": "0.182.0",
+    "@vitejs/plugin-react": "5.1.2",
+    "chart.js": "4.5.1",
+    "chartjs-adapter-date-fns": "3.0.0",
+    "chartjs-plugin-annotation": "3.1.0",
+    "date-fns": "4.1.0",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-react-refresh": "0.4.26",
+    "globals": "16.5.0",
+    "prettier": "3.7.4",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-globe.gl": "2.37.0",
+    "three": "0.182.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.52.0",
+    "vite": "7.3.1"
   }
 }
